--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
 
     </div><!-- en mainSection -->
   </section>
+  
+  <section id="imageDomWrapper"></section>
 
   <!-- Scripts JS -->
   <script src="assets/js/jquery-3.3.1.min.js"></script>
